--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -172,5 +172,8 @@
   <ItemGroup>
     <Resource Include="Asset\logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Asset\bg.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
